--- a/School.data/School.data.csproj
+++ b/School.data/School.data.csproj
@@ -56,6 +56,15 @@
   <ItemGroup>
     <Compile Include="ClassRoom.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202201061651507_InitialCreate.cs" />
+    <Compile Include="Migrations\202201061651507_InitialCreate.Designer.cs">
+      <DependentUpon>202201061651507_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202201061813007_firstmigration.cs" />
+    <Compile Include="Migrations\202201061813007_firstmigration.Designer.cs">
+      <DependentUpon>202201061813007_firstmigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schools.cs" />
     <Compile Include="Teacher.cs" />
@@ -63,6 +72,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202201061651507_InitialCreate.resx">
+      <DependentUpon>202201061651507_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201061813007_firstmigration.resx">
+      <DependentUpon>202201061813007_firstmigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
